--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -9,6 +9,9 @@ on:
     branches:
       - develop
 
+  merge_group:
+    types: [checks_requested]
+
 jobs:
   validate-protobuf:
     runs-on: ubuntu-latest
