--- a/.github/workflows/build-test-image.yml
+++ b/.github/workflows/build-test-image.yml
@@ -3,13 +3,31 @@ name: Build and Publish Test Image
 on:
   merge_group:
     types: [checks_requested]
+  pull_request_target:
+    branches:
+      - develop
+
 
 env:
   REGISTRY: ghcr.io
 
 jobs:
+  check_actor_permissions:
+        runs-on: ubuntu-latest
+        outputs:
+            ismaintainer: ${{ steps.teamAffiliation.outputs.isTeamMember }}
+        steps:
+          - name: Check if actor is a maintainer
+            uses: tspascoal/get-user-teams-membership@v2
+            id: teamAffiliation
+            with:
+              GITHUB_TOKEN: ${{ secrets.ORG_READER_PAT }}
+              username: ${{ github.actor }}
+              team: opencost-maintainers
   build-and-publish-test-image:
     runs-on: ubuntu-latest
+    needs: check_actor_permissions
+    if: ${{ (always() && !cancelled()) && ( github.event_name == 'merge_group' || needs.check_actor_permissions.outputs.ismaintainer == 'true') }}
     permissions:
       contents: read
       packages: write
